<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/MQTT_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mqtt_connection"
            android:fontFamily="sans-serif"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/disconnect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:enabled="false" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/Connected_Server_MQTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_to"
            android:fontFamily="sans-serif"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Server_MQTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_conn"
            android:fontFamily="sans-serif"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_Topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic" />

        <EditText
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/textView_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" />

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/publish_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish" />

    </LinearLayout>

</LinearLayout>